<resources>
    <string name="app_name">Tique</string>
    <string name="todo">TODO</string>
    <string name="logar">Logar</string>


    <string name="descricao">Tique: \nNa antiga grecia,
                                    \nera a responsável
                                    \npela fortuna e
                                    \nprosperidade, do seu
                                    \ndestino e sorte,
                                    \nboa ou ruim.
                                    \nNa mitologia romana era Fortuna.</string>

    <string name="sobre">sobre</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="no">no</string>


    <string name="bt_01">01</string>
    <string name="bt_02">02</string>
    <string name="bt_03">03</string>
    <string name="bt_04">04</string>
    <string name="bt_05">05</string>
    <string name="bt_06">06</string>
    <string name="bt_07">07</string>
    <string name="bt_08">08</string>
    <string name="bt_09">09</string>
    <string name="bt_10">10</string>
    <string name="bt_11">11</string>
    <string name="bt_12">12</string>
    <string name="bt_13">13</string>
    <string name="bt_14">14</string>
    <string name="bt_15">15</string>
    <string name="bt_16">16</string>
    <string name="bt_17">17</string>
    <string name="bt_18">18</string>
    <string name="bt_19">19</string>
    <string name="bt_20">20</string>
    <string name="loja">Loja</string>
    <string name="salvar">Salvar</string>
    <string name="nome_da_loja">nome da loja</string>
    <string name="endere_o">endereço</string>
    <string name="telefone">telefone</string>
    <string name="respons_vel">responsável</string>
    <string name="voltar">voltar</string>
    <string name="sair">Sair</string>
    <string name="editar">editar</string>
    <string name="excluir">excluir</string>

</resources>