<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_margin="25dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_logar_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:hint="@string/e_mail"
        android:autofillHints="@string/no" />

    <EditText
        android:id="@+id/et_logar_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/no" />

</androidx.appcompat.widget.LinearLayoutCompat>